--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   cloud_firestore: ^0.12.9+3
   provider: ^3.1.0
+  #googleapis: ^0.54.0
+  csv: ^4.0.3
 
 dev_dependencies:
   flutter_test:
@@ -41,6 +43,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - lib/assets/excel/abc.csv
 
   # To add assets to your application, add an assets section, like this:
   # assets:
