--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   provider: ^3.1.0
   #googleapis: ^0.54.0
   csv: ^4.0.3
+  file_picker: ^1.4.0+1
+  image_picker: ^0.5.1
 
 dev_dependencies:
   flutter_test:
